<resources>
    <string name="app_name">全国警用快递</string>
    <string name="login_user">账　号：</string>
    <string name="input_account">请输入账号</string>
    <string name="password">密　码：</string>
    <string name="old_psw">旧密码：</string>
    <string name="new_psw">新密码：</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_oldpsw">请输入旧密码</string>
    <string name="confirm_psw">请确认密码</string>
    <string name="login_check_text">记住用户名</string>
    <string name="login">登　录</string>
    <string name="search">查  询</string>
    <string name="forget_psw">忘记密码</string>
    <string name="new_user_register">修改密码</string>
    <string name="other_login">第三方账号登录</string>
    <string name="back_psw">找回密码</string>
    <string name="query_recode">查询记录</string>
    <string name="reset_psw">修改密码</string>
    <string name="rewrite_psw">确认密码：</string>
    <string name="phone">手　机：</string>
    <string name="v_code">验证码：</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_v_code">请输入验证码</string>
    <string name="complete">完　成</string>
    <string name="get_v_code">获取验证码</string>
    <string name="ok">完成</string>
    <string name="push">提交</string>
    <string name="remember_psw">记住密码</string>
    <string name="input_num_query">请输入运单号查询快件信息</string>
    <string name="agree_agreement">同意《咚咚服务协议》</string>
    <string name="code">运单号：</string>
    <string name="query">查询</string>
    <string name="query_">物流追踪</string>
    <string name="input_order_id">请输入或扫描单号查询</string>
    <string name="input_per_id">请输入快递员身份证号码</string>
    <string name="input_com_id">请选择企业名称</string>
    <string name="input_com_code_id">请选择企业编码</string>
    <string name="order_id">快递单号：</string>
    <string name="per_id">快递员：</string>
    <string name="com_id">快递企业：</string>
    <string name="com_code">快递企业编码：</string>

    <string name="str_scan_title">扫一扫</string>
    <string name="str_open_light">开启闪光灯</string>
    <string name="str_close_light">关闭闪光灯</string>
    <string name="str_scan_hint">取景框对准条形码, 即可自动扫描</string>

    <string name="title_activity_findkey">Findkey</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_find_key">FindKeyActivity</string>


    <string name="hello">Hello World, MainActivity!</string>
</resources>
