<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FindKeyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_user_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="@string/old_psw"
             />

        <EditText
            android:id="@+id/et_oldpwd_find"
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="@string/input_oldpsw"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_smalls_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="@string/new_psw"
             />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="@string/input_psw"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_smalls_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_edge"
            android:gravity="center"
            android:text="@string/rewrite_psw"
             />

        <EditText
            android:id="@+id/et_confirm_psw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="10px"
            android:hint="@string/confirm_psw"
            android:inputType="textPassword"
            android:padding="@dimen/padding"
            android:paddingLeft="10px"
            android:textSize="@dimen/textview_smalls_size" />
    </LinearLayout>

    <LinearLayout style="@style/common_horizontal_division_line_style" />


    <Button
        android:id="@+id/bt_complete"
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button_selector"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="#ffffff"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20" />
</LinearLayout>
